[package]
name = "torrent_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
winnow = "1.0.1"
sha1 = "0.11.0"
reqwest = "0.13.2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures-util = { version = "0.3", features = ["sink"] }
url = "2.2"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"